kustomize-argoupdater/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myweb
  template:
    metadata:
      labels:
        app: myweb
    spec:
      containers:
      - image: docker.io/wooosik/argoupdater:2.0
        name: myweb
        ports:
        - containerPort: 80
