kustomize-argoupdater/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myweb
spec:
  rules:
  - host: "sample.192.168.50.16.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myweb
            port:
              number: 5000
